# ElCache

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
config/: elcache.json.example
docs/: API.md  ARCHITECTURE.md  SDK.md
examples/: CMakeLists.txt  basic_usage.cpp  sdk_example.c
include/elcache/: arc_cache.hpp  cache.hpp  cache_coordinator.hpp  chunk.hpp  cluster.hpp  config.hpp  disk_cache.hpp  elcache.hpp  elcache_sdk.h  http_api.hpp  memory_cache.hpp  metrics.hpp  protocol.hpp  sparse_cache.hpp  types.hpp  unix_server.hpp
src/: main.cpp
src/cache/: arc_cache.cpp  cache_coordinator.cpp  disk_cache.cpp  memory_cache.cpp  sparse_cache.cpp
src/core/: chunk.cpp  config.cpp  types.cpp
src/http/: http_api.cpp  metrics.cpp
src/network/: cluster.cpp  gossip.cpp  node.cpp  unix_server.cpp
src/protocol/: codec.cpp  protocol.cpp
src/sdk/: elcache_client.c  protocol.c  shm_transport.c  unix_transport.c
src/storage/: chunk_store.cpp  disk_store.cpp
src/util/: hash.cpp  lru.cpp
tests/: CMakeLists.txt  test_arc_cache.cpp  test_chunk.cpp  test_cluster.cpp  test_coordinator.cpp  test_disk_cache.cpp  test_http_api.sh  test_memory_cache.cpp  test_metrics.cpp  test_protocol.cpp  test_sdk.c  test_types.cpp
